[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
chrono = "0.4.42"
flate2 = "1.0.34"                                # compression
reqwest = "0.12.23"
sha1 = "0.10.6"
thiserror = "1.0.38"                             # error handling
tokio = {version = "1.47.1", features = ["full"]}
